# anton-ai

./: .eslintrc.js  .gitignore  .prettierrc  CLAUDE.md  DEPLOYMENT.md  PROGRESS.md  electron-builder.yml  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
.github/workflows/: build-windows.yml
catalogue/: catalogue.json
electron/: db.js  main.js  preload.js
electron/config/: features.js  firebase-admin.js  firebase.js
electron/handlers/: appControl.js  auth.js  catalogue.js  clipboard.js  contextManager.js  documentParser.js  downloader.js  hardware.js  llama.js  namedPipeServer.js  promptEngine.js  websocketServer.js  whisper.js
engines/: README.md
extension/: manifest.json
extension/background/: service_worker.js
extension/content/: gmail.js  outlook.js  universal.js
extension/popup/: popup.html
native/: CMakeLists.txt  shell_extension.cpp  shell_extension.def
src/: App.jsx  index.jsx
src/components/chat/: ChatInput.jsx  ChatMessage.jsx  ContextBar.jsx  SmartChips.jsx  (+2 more)
src/data/: featuresData.js  helpContent.js
src/screens/: AppShell.jsx  AudioCaptureWindow.jsx  ChatPanelWindow.jsx  ChatScreen.jsx  ClipboardIndicatorWindow.jsx  DocumentScreen.jsx  FeaturesTab.jsx  ForceUpdate.jsx  HelpScreen.jsx  Login.jsx  Maintenance.jsx  ModelLibrary.jsx  Onboarding.jsx  RecordingOverlayWindow.jsx  Settings.jsx
src/stores/: useAppStore.js  useAuthStore.js  useClipboardStore.js  useConversationStore.js  useDocumentStore.js  useDownloadStore.js  useHardwareStore.js  useModelStore.js  useSettingsStore.js
src/styles/: index.css
(+15 files in other folders)
